sitespeed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sitespeed-api
  namespace: sitespeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sitespeed-api
  template:
    metadata:
      labels:
        app: sitespeed-api
    spec:
      serviceAccountName: sitespeed-api
      containers:
        - name: api
          image: ghcr.io/shyim/sitespeed.io-api:0.1.4 # {"$imagepolicy": "flux-system:sitespeed-api"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: 64Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 500m
