sitespeed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sitespeed-api
  namespace: sitespeed
spec:
  selector:
    app: sitespeed-api
  ports:
    - port: 80
      targetPort: 8080
